Still broken, am clueless

--- a/customer_add.html
+++ b/customer_add.html
@@ -11,10 +11,6 @@
 	</head>
 	
 <body>
-
-	<?php  
-		include 'customer_add.php';
-	?>
 	
 	<nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -43,7 +39,7 @@
 
 
 <div class="">
-	<form class="col-sm-4 col-lg-4 col-sm-offset-4 col-lg-offset-4" method="POST" action="">
+	<form class="col-sm-4 col-lg-4 col-sm-offset-4 col-lg-offset-4" method="POST" action="customer_add.php">
 		<legend>Add a Customer</legend>
 		
 		<div class="form-group">
@@ -87,7 +83,7 @@
 		</div>
 		
 		<div class="form-group">
-				<button type="submit" id="id_submit" name='submitbutton' class="btn btn-primary">Submit</button>
+				<button type="submit" id="id_submit" name='submitbutton' class="btn btn-primary" value="Submit">Submit</button>
 		</div>
 	</form>
 </div>
