Added Upload Capabilities
Page now adds record to the database

--- a/customer_add.html
+++ b/customer_add.html
@@ -43,7 +43,7 @@
 
 
 <div class="">
-	<form class="col-sm-4 col-lg-4 col-sm-offset-4 col-lg-offset-4" method="POST" action="">
+	<form class="col-sm-4 col-lg-4 col-sm-offset-4 col-lg-offset-4" method="post" action="customer_add.php">
 		<legend>Add a Customer</legend>
 		
 		<div class="form-group">
