--- a/customer_add.html
+++ b/customer_add.html
@@ -28,7 +28,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-		<li><a href="#">View</a></li>
+		<li><a href="index.php">View</a></li>
         <li class="active"><a href="#">Add<span class="sr-only">(current)</span></a></li>
       </ul>
         
